bin/tests/errors_lexer/lexer/lex_err_trailing_num_sep.swg
#global fileprivate

0b0_ // swc-expected-error {{lex_err_trailing_num_sep}}
